@@ -1,6 +1,7 @@
 Revision history for Twitter::API
 
 {{$NEXT}}
+  - upload_media accepts positional params media or media_data
 
 0.0102  2016-12-05 08:44:19 PST (TRIAL RELEASE)
   - fix invalidate_token
